--- a/package.json
+++ b/package.json
@@ -29,16 +29,18 @@
     "@babel/runtime": "^7.4.5",
     "autoprefixer": "^9.6.0",
     "babel-loader": "^8.0.6",
-    "bootstrap": "^4.3.1",
     "css-loader": "^0.28.7",
+    "deepmerge": "^4.2.2",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "javascript-natural-sort": "^0.7.1",
     "node-sass": "^4.12.0",
     "postcss-loader": "^2.1.6",
-    "sass-loader": "^7.1.0",
+    "sass": "^1.32.4",
+    "sass-loader": "^10.1.1",
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.10",
+    "vuetify": "^2.4.2",
     "webpack": "^4.35.2",
     "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.7.2",
