--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@marketconnect/vue-pivot-table",
   "description": "A vue component for pivot table",
   "private": false,
-  "version": "0.1.1",
+  "version": "0.1.2",
   "author": "MarketConnect",
   "license": "MIT",
   "repository": {
@@ -22,6 +22,9 @@
     "vue": "^2.6.10",
     "vuedraggable": "^2.23.0"
   },
+  "peerDependencies": {
+    "vuetify": "^2.4.2"
+  },
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/plugin-transform-runtime": "^7.4.4",
@@ -40,7 +43,6 @@
     "sass-loader": "^10.1.1",
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.10",
-    "vuetify": "^2.4.2",
     "webpack": "^4.35.2",
     "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.7.2",
